<resources>
    <string name="app_name">Practica-5</string>
    <string name="welcome_text">Welcome to the portales</string>
    <string name="button_start">get started!</string>
    <string name="welcome_description">Taqueria los portales is a quick, casual restuarant</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">e-mail</string>
    <string name="password">Password</string>
    <string name="terms">Terminos y condiciones</string>
    <string name="sign_in">Sign in</string>
    <string name="our_menu">OUR MENU</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="combinations">Combinations</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>


</resources>